force-app/main/default/objects/Internal_Contact__c/Internal_Contact__c.object-meta.xml
<CustomObject>
    <description>Internal Contacts/Collectors</description>
    <label>Internal Contact</label>
    <nameField>
        <label>Internal Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Internal Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>