force-app/main/default/objects/Internal_Contact__c/fields/Account_id__c.field-meta.xml
<CustomField>
    <fullName>Account_id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Internal Contacts</relationshipLabel>
    <relationshipName>Internal_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>