force-app/main/default/objects/Internal_Contact__c/fields/Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Contact_Type__c</fullName>
    <label>Contact Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>