force-app/main/default/objects/Internal_Contact__c/fields/Internal_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Internal_Contact_Id__c</fullName>
    <externalId>true</externalId>
    <label>Internal Contact Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>